<resources>
    <string name="app_name">NasaApp</string>

    <string name="photo_of_the_day_stub">Photo of the day</string>
    <string name="search_wiki">Search on wikipedia</string>
    <string name="wiki_helper_text">Try to find in wikipedia</string>
    <string name="favourite">Favourite</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="chips">Chips</string>
    <string name="today_s_photo">Today</string>
    <string name="yesterday_s_photo">Yesterday</string>
    <string name="before_yesterday_s_photo">Before yesterday</string>
    <string name="day_theme">Day Theme</string>
    <string name="night_theme">Night Theme</string>
    <string name="mars_theme">Mars Theme</string>
    <string name="earth">Earth</string>
    <string name="mars">Mars</string>
    <string name="system">System</string>
    <string name="navigation_drawer_activity">Navigation drawer activity</string>
    <string name="tab_layout_activity">Tab layout activity</string>
    <string name="photos">Photos</string>
    <string name="current_weather">Current weather</string>
    <string name="not_yet_implemented">Not yet implemented.</string>
    <string name="constraint">Constraint</string>
    <string name="coordinator">Coordinator</string>
    <string name="planets">Planets</string>
    <string name="animations">Animations</string>
    <string name="recycler">Recycler</string>
    <string name="description">Марс — четвёртая по удалённости от Солнца и седьмая по размерам планета Солнечной системы. Названа в честь Марса — древнеримского бога войны, соответствующего древнегреческому Аресу. Иногда Марс называют «красной планетой» из-за красноватого оттенка поверхности, придаваемого ей минералом маггемитом (оксидом железа).</string>
    <string name="open_note">Open note</string>
    <string name="type_your_text">Type your text</string>
    <string name="description_eng">Mars is the fourth largest planet from the Sun and the seventh largest planet in the solar system. Named after Mars, the ancient Roman god of war, corresponding to the ancient Greek Ares. Sometimes Mars is called the "red planet" because of the reddish hue of the surface, given to it by the mineral magnetite (iron oxide).</string>
</resources>