<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/settings_margin_top_10"
        android:gravity="center"
        android:text="@string/settings"
        android:textSize="@dimen/ts_20sp" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroupThemes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/day"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/day_theme" />

        <com.google.android.material.chip.Chip
            android:id="@+id/night"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/night_theme" />

        <com.google.android.material.chip.Chip
            android:id="@+id/mars"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mars_theme" />

    </com.google.android.material.chip.ChipGroup>

</LinearLayout>